--- a/src/app/fruitlist/fruitlist/fruitlist.component.html
+++ b/src/app/fruitlist/fruitlist/fruitlist.component.html
@@ -1,5 +1,5 @@
 <div class="fruitlist_content">
-  @for(singlefruit of fruitlist; track singlefruit.name; let index = $index){
-    <app-singlefruit (fruitName)="nameLog($event)" [fruit]="singlefruit"></app-singlefruit>
+  @for(singlefruit of fruitlistdata.fruitlist; track singlefruit.name; let index = $index){
+    <app-singlefruit (fruitName)="addComment($event,index)" [fruit]="singlefruit"></app-singlefruit>
   }
 </div>
